--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -15,4 +15,5 @@
 \newacronym{pdf}{PDF}{Portable Document Format}
 \newacronym{html}{HTML}{Hypertext Markup Language}
 \newacronym{ide}{IDE}{Integrated development environment}
+\newacronym{gui}{GUI}{Graphical User Interface}
 
