--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -55,10 +55,16 @@ url = {https://docs.pytest.org/en/7.4.x/},
 
 @misc{GithubActions,
 author = {GitHub, Inc.},
-title = {Github Actions - Automate your workflow
-from idea to production},
+title = {Github Actions - Automate your workflow from idea to production},
 year = {01.01.2024},
 url = {https://github.com/features/actions},
+}
+
+@misc{PythonGlobalSymbolTable,
+author = {Python Software Foundation},
+title = {Python Docs - globals},
+year = {01.01.2024},
+url = {https://docs.python.org/3/library/functions.html#globals},
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%
