--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -16,4 +16,10 @@
 \newacronym{html}{HTML}{Hypertext Markup Language}
 \newacronym{ide}{IDE}{Integrated development environment}
 \newacronym{gui}{GUI}{Graphical User Interface}
+\newacronym{sbc}{SBC}{Single Board Computer}
+\newacronym{gpio}{GPIO}{General Purpose Input/Output}
+\newacronym{uart}{UART}{Universal Asynchronous Receiver / Transmitter}
+
+
+
 
