--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -67,6 +67,15 @@ year = {01.01.2024},
 url = {https://docs.python.org/3/library/functions.html#globals},
 }
 
+
+@misc{VoltcraftGM70Rest,
+author = {Marcel Ochsendorf},
+title = {VoltcraftGM70 REST Interface},
+year = {01.01.2024},
+url = {https://github.com/RBEGamer/VoltcraftGM70Rest},
+}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 % Bücher
 %%%%%%%%%%%%%%%%%%%%%%%%
